Switch to system-ui fonts & css fixes and improvements
- Removed all local fonts (system-ui instead)
- Fixed header not showing on mobile
- Hid scrollbar for related-wrapper on mobile
- Screenshots on desktop no longer scrollable
- Fixed light mode related issues
- Scaled down renai.png
- Other minor css improvements

--- a/static/app.css
+++ b/static/app.css
@@ -1,21 +1,3 @@
-@font-face {
-	font-family: 'SF Display';
-	font-weight: 700;
-	src: url('fonts/SF-UI-Display-Bold.otf');
-}
-
-@font-face {
-	font-family: 'SF Text';
-	font-weight: 200;
-	src: url('fonts/SF-UI-Text-Light.otf');
-}
-
-@font-face {
-	font-family: 'SF Display Semibold';
-	font-weight: 600;
-	src: url('fonts/SF-UI-Display-Semibold.otf');
-}
-
 ::-webkit-scrollbar {
 	width: 10px;
 }
@@ -57,7 +39,7 @@
 }
 
 body {
-	font-family: SF Display, Helvetica, Arial, sans-serif;
+	font-family: system-ui, Helvetica, Arial, sans-serif;
 	background: black;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -128,7 +110,7 @@ header {
 }
 
 .wallprev-container {
-	width: 50em;
+	width: 768px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -156,6 +138,7 @@ header {
 
 .top-image-background img {
 	width: 100%;
+	height: 100%;
 	object-fit: cover;
 	position: absolute;
 	z-index: 1;
@@ -207,7 +190,6 @@ header {
 }
 
 .credits-section p {
-	font-family: 'SF Text';
 	font-size: small;
 	color: rgba(255, 255, 255, 0.5);
 }
@@ -225,7 +207,6 @@ header {
 }
 
 .user a {
-	font-family: 'SF Text';
 	font-size: 11pt;
 	color: rgb(0, 122, 255);
 }
@@ -244,8 +225,7 @@ header {
 .screenshots-wrapper {
 	height: 482px;
 	padding-bottom: 48px;
-	overflow-x: scroll;
-	overflow-y: hidden;
+	overflow-x: visible;
 	white-space: nowrap;
 	-webkit-overflow-scrolling: touch;
 }
@@ -282,7 +262,6 @@ header {
 }
 
 .resolution {
-	font-family: 'SF Text';
 	font-size: small;
 	padding-top: 16px;
 	padding-bottom: 16px;
@@ -390,7 +369,6 @@ header {
 	background: rgb(0, 122, 255);
 	color: white;
 	font-size: 11pt;
-	font-family: 'SF Display Semibold';
 	width: 100%;
 	text-align: center;
 	padding-left: auto;
@@ -484,7 +462,6 @@ header {
 
 .footer p {
 	color: rgba(255, 255, 255, 0.5);
-	font-family: 'SF Text';
 	font-size: 10pt;
 }
 
@@ -494,7 +471,7 @@ header {
 	}
 }
 
-@media only screen and (max-width: 512px) {
+@media only screen and (max-width: 499px) {
 	.wallprev-container {
 		width: 100%;
 		margin-left: 0;
@@ -504,11 +481,7 @@ header {
 	.wallprev {
 		grid-template-columns: repeat(3, 1fr);
 	}
-
-	.top-image-background img {
-		margin: -70% 0;
-	}
-
+	
 	.get-button-container {
 		display: none;
 		width: 100%;
@@ -542,6 +515,15 @@ header {
 		display: none;
 	}
 
+	.screenshots-wrapper {
+		overflow-x: scroll;
+		overflow-y: hidden;
+	}
+
+	.related-wrapper::-webkit-scrollbar {
+		display: none;
+	}
+
 	.footer {
 		margin-left: 0.5em;
 		margin-right: 0.5em;
@@ -570,7 +552,7 @@ header {
 		background: rgba(0, 0, 0, 0.8);
 	}
 	.showcase h1,
-	.showcase h3,
+	.showcase h2,
 	.subtitle,
 	.stack,
 	.resolution,
@@ -578,7 +560,7 @@ header {
 	.credits-text h1 {
 		color: rgba(255, 255, 255, 0.9);
 	}
-	.credits-text h4 {
+	.credits-text p {
 		color: rgba(255, 255, 255, 0.25);
 	}
 	.footer p,
@@ -654,7 +636,7 @@ header {
 		background: rgb(253, 253, 253, 0.8);
 	}
 	.showcase h1,
-	.showcase h3,
+	.showcase h2,
 	.subtitle,
 	.stack,
 	.resolution,
@@ -662,7 +644,7 @@ header {
 	.credits-text h1 {
 		color: rgb(0, 0, 0, 0.9);
 	}
-	.credits-text h4 {
+	.credits-text p {
 		color: rgb(0, 0, 0, 0.25);
 	}
 	.footer p,
